// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Snackbar /> error error 1`] = `
<div>
  <div>
    <div>
      <div />
      <div
        data-testid="component-wrapper"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Snackbar__StyledView-sc-18zefp4-0 iQCSLV Spaceweb__Space-sc-1abqisc-0 dGGICH"
          color="negative.900"
          type="failure"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 ivPNaT"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fqGRZo"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fRwLwk"
              >
                <svg
                  fill="none"
                  height="20"
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 9C12.5523 9 13 9.44771 13 10V14C13 14.5523 12.5523 15 12 15C11.4477 15 11 14.5523 11 14V10C11 9.44771 11.4477 9 12 9Z"
                    fill="rgba(255, 255, 255, 1.0)"
                  />
                  <path
                    d="M12 19C12.5523 19 13 18.5523 13 18C13 17.4477 12.5523 17 12 17C11.4477 17 11 17.4477 11 18C11 18.5523 11.4477 19 12 19Z"
                    fill="rgba(255, 255, 255, 1.0)"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.43502 4.34136C9.97887 3.44479 10.9514 2.89725 12 2.89725C13.0486 2.89725 14.0212 3.44479 14.565 4.34136L14.5679 4.34611L23.0379 18.4861L23.046 18.4999C23.5791 19.423 23.5822 20.5597 23.0544 21.4857C22.5265 22.4118 21.5469 22.9882 20.481 22.9999L20.47 23.0001L3.51903 23C2.45315 22.9883 1.47353 22.4118 0.94567 21.4857C0.41781 20.5597 0.420993 19.423 0.95403 18.4999L0.962153 18.4861L9.43502 4.34136ZM11.1462 5.37663L2.6827 19.5058C2.50833 19.8125 2.50837 20.1886 2.68322 20.4953C2.85842 20.8027 3.1829 20.9945 3.53642 21H20.4636C20.8171 20.9945 21.1416 20.8027 21.3168 20.4953C21.4917 20.1886 21.4917 19.8125 21.3174 19.5059L12.855 5.37862L12.8538 5.37663C12.6723 5.07895 12.3488 4.89725 12 4.89725C11.6513 4.89725 11.3277 5.07895 11.1462 5.37663Z"
                    fill="rgba(255, 255, 255, 1.0)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
              <div
                class="Textweb__Text-sc-1qrdpx3-0 Snackbar__SnackbarText-sc-18zefp4-1 bhuqZ Spaceweb__Space-sc-1abqisc-0 kCHaiv"
                color="light.900"
                data-testid="ds-text"
              >
                failure message
              </div>
            </div>
            <button
              class="Buttonweb__StyledButton-sc-18xf15a-0 gJPCxv Spaceweb__Space-sc-1abqisc-0 iZssHR Sizeweb__Size-sc-1e5yf1-0 dmNVka Flexweb__Flex-sc-1yhcoea-0 iWcLkq"
              data-testid="ds-snackbar"
              type="button"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                  fill="rgba(255, 255, 255, 1.0)"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;

exports[`<Snackbar /> error success 1`] = `
<div>
  <div>
    <div>
      <div />
      <div
        data-testid="component-wrapper"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Snackbar__StyledView-sc-18zefp4-0 fcQdAW Spaceweb__Space-sc-1abqisc-0 dGGICH"
          color="positive.900"
          type="success"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 ivPNaT"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fqGRZo"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fRwLwk"
              >
                <svg
                  fill="none"
                  height="20"
                  viewBox="0 0 24 24"
                  width="20"
                >
                  <g
                    clip-path="url(#prefix__clip0)"
                    fill="rgba(255, 255, 255, 1.0)"
                  >
                    <path
                      d="M4.158 7.147a9 9 0 0110.505-2.374 1 1 0 10.814-1.826A11 11 0 1022 13v-.93a1 1 0 10-2 0V13A9 9 0 114.158 7.146z"
                    />
                    <path
                      d="M22.707 4.707a1 1 0 00-1.414-1.414L11 13.586l-2.293-2.293a1 1 0 00-1.414 1.414l3 3a1 1 0 001.414 0l11-11z"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="prefix__clip0"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="rgba(255, 255, 255, 1.0)"
                      />
                    </clippath>
                  </defs>
                </svg>
              </div>
              <div
                class="Textweb__Text-sc-1qrdpx3-0 Snackbar__SnackbarText-sc-18zefp4-1 bhuqZ Spaceweb__Space-sc-1abqisc-0 kCHaiv"
                color="light.900"
                data-testid="ds-text"
              >
                success message
              </div>
            </div>
            <button
              class="Buttonweb__StyledButton-sc-18xf15a-0 gJPCxv Spaceweb__Space-sc-1abqisc-0 iZssHR Sizeweb__Size-sc-1e5yf1-0 dmNVka Flexweb__Flex-sc-1yhcoea-0 iWcLkq"
              data-testid="ds-snackbar"
              type="button"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                  fill="rgba(255, 255, 255, 1.0)"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;

exports[`<Snackbar /> showSnackbar hide snackbar 1`] = `
<div>
  <div>
    <div>
      <div />
      <div
        data-testid="component-wrapper"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Snackbar__StyledView-sc-18zefp4-0 iQCSLV Spaceweb__Space-sc-1abqisc-0 dGGICH"
          color="negative.900"
          type="failure"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 ivPNaT"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fqGRZo"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fRwLwk"
              >
                <svg
                  fill="none"
                  height="20"
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 9C12.5523 9 13 9.44771 13 10V14C13 14.5523 12.5523 15 12 15C11.4477 15 11 14.5523 11 14V10C11 9.44771 11.4477 9 12 9Z"
                    fill="rgba(255, 255, 255, 1.0)"
                  />
                  <path
                    d="M12 19C12.5523 19 13 18.5523 13 18C13 17.4477 12.5523 17 12 17C11.4477 17 11 17.4477 11 18C11 18.5523 11.4477 19 12 19Z"
                    fill="rgba(255, 255, 255, 1.0)"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.43502 4.34136C9.97887 3.44479 10.9514 2.89725 12 2.89725C13.0486 2.89725 14.0212 3.44479 14.565 4.34136L14.5679 4.34611L23.0379 18.4861L23.046 18.4999C23.5791 19.423 23.5822 20.5597 23.0544 21.4857C22.5265 22.4118 21.5469 22.9882 20.481 22.9999L20.47 23.0001L3.51903 23C2.45315 22.9883 1.47353 22.4118 0.94567 21.4857C0.41781 20.5597 0.420993 19.423 0.95403 18.4999L0.962153 18.4861L9.43502 4.34136ZM11.1462 5.37663L2.6827 19.5058C2.50833 19.8125 2.50837 20.1886 2.68322 20.4953C2.85842 20.8027 3.1829 20.9945 3.53642 21H20.4636C20.8171 20.9945 21.1416 20.8027 21.3168 20.4953C21.4917 20.1886 21.4917 19.8125 21.3174 19.5059L12.855 5.37862L12.8538 5.37663C12.6723 5.07895 12.3488 4.89725 12 4.89725C11.6513 4.89725 11.3277 5.07895 11.1462 5.37663Z"
                    fill="rgba(255, 255, 255, 1.0)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
              <div
                class="Textweb__Text-sc-1qrdpx3-0 Snackbar__SnackbarText-sc-18zefp4-1 bhuqZ Spaceweb__Space-sc-1abqisc-0 kCHaiv"
                color="light.900"
                data-testid="ds-text"
              >
                failure message
              </div>
            </div>
            <button
              class="Buttonweb__StyledButton-sc-18xf15a-0 gJPCxv Spaceweb__Space-sc-1abqisc-0 iZssHR Sizeweb__Size-sc-1e5yf1-0 dmNVka Flexweb__Flex-sc-1yhcoea-0 iWcLkq"
              data-testid="ds-snackbar"
              type="button"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                  fill="rgba(255, 255, 255, 1.0)"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;

exports[`<Snackbar /> showSnackbar show snackbar 1`] = `
<div>
  <div>
    <div>
      <div />
      <div
        data-testid="component-wrapper"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Snackbar__StyledView-sc-18zefp4-0 iQCSLV Spaceweb__Space-sc-1abqisc-0 dGGICH"
          color="negative.900"
          type="failure"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 ivPNaT"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fqGRZo"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fRwLwk"
              >
                <svg
                  fill="none"
                  height="20"
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 9C12.5523 9 13 9.44771 13 10V14C13 14.5523 12.5523 15 12 15C11.4477 15 11 14.5523 11 14V10C11 9.44771 11.4477 9 12 9Z"
                    fill="rgba(255, 255, 255, 1.0)"
                  />
                  <path
                    d="M12 19C12.5523 19 13 18.5523 13 18C13 17.4477 12.5523 17 12 17C11.4477 17 11 17.4477 11 18C11 18.5523 11.4477 19 12 19Z"
                    fill="rgba(255, 255, 255, 1.0)"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.43502 4.34136C9.97887 3.44479 10.9514 2.89725 12 2.89725C13.0486 2.89725 14.0212 3.44479 14.565 4.34136L14.5679 4.34611L23.0379 18.4861L23.046 18.4999C23.5791 19.423 23.5822 20.5597 23.0544 21.4857C22.5265 22.4118 21.5469 22.9882 20.481 22.9999L20.47 23.0001L3.51903 23C2.45315 22.9883 1.47353 22.4118 0.94567 21.4857C0.41781 20.5597 0.420993 19.423 0.95403 18.4999L0.962153 18.4861L9.43502 4.34136ZM11.1462 5.37663L2.6827 19.5058C2.50833 19.8125 2.50837 20.1886 2.68322 20.4953C2.85842 20.8027 3.1829 20.9945 3.53642 21H20.4636C20.8171 20.9945 21.1416 20.8027 21.3168 20.4953C21.4917 20.1886 21.4917 19.8125 21.3174 19.5059L12.855 5.37862L12.8538 5.37663C12.6723 5.07895 12.3488 4.89725 12 4.89725C11.6513 4.89725 11.3277 5.07895 11.1462 5.37663Z"
                    fill="rgba(255, 255, 255, 1.0)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
              <div
                class="Textweb__Text-sc-1qrdpx3-0 Snackbar__SnackbarText-sc-18zefp4-1 bhuqZ Spaceweb__Space-sc-1abqisc-0 kCHaiv"
                color="light.900"
                data-testid="ds-text"
              >
                failure message
              </div>
            </div>
            <button
              class="Buttonweb__StyledButton-sc-18xf15a-0 gJPCxv Spaceweb__Space-sc-1abqisc-0 iZssHR Sizeweb__Size-sc-1e5yf1-0 dmNVka Flexweb__Flex-sc-1yhcoea-0 iWcLkq"
              data-testid="ds-snackbar"
              type="button"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                  fill="rgba(255, 255, 255, 1.0)"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;
